# python-repo-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  migrate.sh  pyproject.toml
.github/: template-setup.md
.github/workflows/: ci.yaml
.hatch/: config.toml
docker/: Dockerfile
scripts/: setup-dev.sh
src/{{PACKAGE_NAME}}/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
